# numtorch

./: Pipfile  README.md  demo.py  pyproject.toml
examples/: ann.py
examples/ann/: ann.py
examples/rnn/: rnn.py
numtorch/: __init__.py
numtorch/layers/: CrossEntropyLoss.py  CrossEntropyLossLayer.py  EmbeddingLayer.py  Layer.py  LinearLayer.py  MSELoss.py  MSELossLayer.py  ReLU.py  RecurrentCell.py  SequentialLayer.py  Sigmoid.py  SigmoidNonLayer.py  SigmoidNonLinearity.py  Tanh.py  TanhNonLayer.py  TanhNonLinearity.py  __init__.py
numtorch/operations/: Add.py  AddOperation.py  CrossEntropyOperation.py  DotProductOperation.py  ExpandOperation.py  IndexOperation.py  MultiplyOperation.py  NegateOperation.py  Operation.py  ReLUOperation.py  SigmoidOperation.py  SubtractOperation.py  SumOperation.py  TanhOperation.py  TransposeOperation.py  __init__.py
numtorch/optimizers/: SGDOptimizer.py  __init__.py
numtorch/tensors/: Tensor.py  TensorOps.py  __init__.py
tests/: test_numtorch.py
